Added Item API endpoints
